#23982 include in 23.01.2