@@ -54,15 +54,17 @@ import javax.servlet.http.HttpServletResponse;
  */
 public class VanityUrlAPIImpl implements VanityUrlAPI {
 
-  private final Set<Integer> allowedActions = new ImmutableSet.Builder<Integer>()
-          .add(HttpStatus.SC_OK)
-          .add(HttpStatus.SC_MOVED_PERMANENTLY)
-          .add(HttpStatus.SC_MOVED_TEMPORARILY).build();
+  private final Set<Integer> allowedActions = Set.of(HttpStatus.SC_OK,HttpStatus.SC_MOVED_PERMANENTLY,HttpStatus.SC_MOVED_TEMPORARILY);
 
   private static final String SELECT_LIVE_VANITY_URL_INODES =
-      "SELECT cvi.live_inode FROM contentlet c, contentlet_version_info cvi, structure s "
-          + " where s.structuretype = ? and c.structure_inode = s.inode "
-          + " and cvi.live_inode=c.inode and cvi.lang =?";
+          " SELECT cvi.live_inode  "
+                  + " FROM identifier, contentlet_version_info cvi "
+                  + " where  "
+                  + " cvi.live_inode is not null and "
+                  + " identifier.id = cvi.identifier and  "
+                  + " identifier.host_inode = ? and  "
+                  + " identifier.asset_subtype in   "
+                  + " (select velocity_var_name from structure where structuretype=7)";
 
   public static final String   LEGACY_CMS_HOME_PAGE = "/cmsHomePage";
   private final ContentletAPI  contentletAPI;
@@ -98,18 +100,29 @@ public class VanityUrlAPIImpl implements VanityUrlAPI {
     if(site==null || site.getIdentifier()==null) {
         throw new DotStateException("Site cannot be null. Got: " + site);
     }
-    Logger.info(this.getClass(), String.format("Populating Vanity URLs for Site '%s'", site.getHostname()));
+
+    List<CachedVanityUrl> vanitiesAllLanguages = findInDb(site);
+
+    Logger.info(this.getClass(), "Populating " +vanitiesAllLanguages.size() + " Vanity URLs for Site " + site.getHostname());
+
+
     for (final Language language : languageAPI.getLanguages()) {
-      cache.putSiteMappings(site, language, findInDb(site, language));
+      cache.putSiteMappings(site, language, vanitiesAllLanguages.stream().filter(v->v.languageId == language.getId()).collect(Collectors.toList()));
     }
   }
 
   @Override
   public void populateAllVanityURLsCache() throws DotDataException {
-    for (final Host site : Try.of(() -> APILocator.getHostAPI().findAllFromDB(APILocator.systemUser(), false)).getOrElse(ImmutableList.of())) {
+    for (final Host site : Try.of(() -> APILocator.getHostAPI().findAllFromDB(APILocator.systemUser(), false)).getOrElse(List.of())) {
       populateVanityURLsCacheBySite(site);
     }
     populateVanityURLsCacheBySite(APILocator.getHostAPI().findSystemHost());
+  }
+
+  @Override
+  public List<CachedVanityUrl> findInDb(Host site, Language language) {
+
+    return findInDb(site).stream().filter(v -> v.languageId == language.getId()).collect(Collectors.toList());
   }
 
   /**
@@ -118,52 +131,53 @@ public class VanityUrlAPIImpl implements VanityUrlAPI {
    * index was not fully updated when reading new data.
    *
    * @param site The Site whose Vanity URLs will be retrieved.
-   * @param language The language used to created the Vanity URLs.
    *
    * @return The list of Vanity URLs.
    */
   @Override
   @CloseDBIfOpened
-  public List<CachedVanityUrl> findInDb(final Host site, final Language language) {
+  public List<CachedVanityUrl> findInDb(final Host site) {
+
+    if (!UtilMethods.isSet(site) || !UtilMethods.isSet(site.getIdentifier())) {
+      return List.of();
+    }
+
 
     try {
 
-      if (!UtilMethods.isSet(site) || !UtilMethods.isSet(site.getIdentifier())) {
-        return null;
-      }
-
-      final List<Map<String, Object>> vanityUrls = new DotConnect().setSQL(
-                      SELECT_LIVE_VANITY_URL_INODES)
-              .addParam(BaseContentType.VANITY_URL.getType())
-              .addParam(language.getId()).loadObjectResults();
+      final List<Map<String, Object>> vanityUrls = new DotConnect()
+              .setSQL(SELECT_LIVE_VANITY_URL_INODES)
+              .addParam(site.getIdentifier())
+              .loadObjectResults();
 
       final List<String> vanityUrlInodes =
-              vanityUrls.stream()
+              vanityUrls
+                      .stream()
                       .map(vanity -> vanity.get("live_inode").toString())
                       .collect(Collectors.toList());
 
-      final List<Contentlet> contentlets = this.contentletAPI.findContentlets(vanityUrlInodes)
+      final List<Contentlet> contentlets = this.contentletAPI
+              .findContentlets(vanityUrlInodes)
               .stream()
-              .filter(contentlet ->
-                      site.getIdentifier().equals(contentlet.getHost()))
+              .filter(contentlet -> site.getIdentifier().equals(contentlet.getHost()))
               .collect(Collectors.toList());
 
-      return contentlets.stream().map(contentlet -> {
-        try {
-          return new CachedVanityUrl(this.fromContentlet(contentlet));
-        } catch (DotStateException e) {
-          Logger.error(VanityUrlAPIImpl.class,
-                  String.format("Validation error loading vanityURL[%S] from db.",
-                          contentlet.getIdentifier()), e);
-        }
-        return null;
-      }).filter(Objects::nonNull).sorted().collect(Collectors.toList());
+      return contentlets
+              .stream().map(contentlet -> {
+                try {
+                  return new CachedVanityUrl(this.fromContentlet(contentlet));
+                } catch (DotStateException e) {
+                  Logger.error(VanityUrlAPIImpl.class,
+                          String.format("Validation error loading vanityURL[%S] from db.", contentlet.getIdentifier()),
+                          e);
+                }
+                return null;
+              }).filter(Objects::nonNull)
+              .sorted()
+              .collect(Collectors.toList());
 
     } catch (final Exception e) {
-      Logger.error(this,
-              String.format(
-                      "An error occurred when retrieving Vanity URLs: siteId=[%s], languageId=[%s]",
-                      site.getIdentifier(), language.getId()),
+      Logger.error(this, String.format("An error occurred when retrieving Vanity URLs: siteId=[%s]", site.getIdentifier()),
               e);
       throw new DotStateException(e);
     }
